--- a/.gitignore
+++ b/.gitignore
@@ -71,11 +71,11 @@ ENV/
 env.bak/
 venv.bak/
 
-# Spyder project settings
+# Spyder project default_settings
 .spyderproject
 .spyproject
 
-# Rope project settings
+# Rope project default_settings
 .ropeproject
 
 # mkdocs documentation
