--- a/config/safety.toml
+++ b/config/safety.toml
@@ -32,7 +32,7 @@
     elevation = 415.4
 
 [database]
-    host = "last0"
+    host = "last0"  # "10.23.1.25"
     name = "last_operational"
     user = "ocs"
     password = "physics"
