--- a/etc/systemd/last-safety-daemon.service
+++ b/etc/systemd/last-safety-daemon.service
@@ -5,7 +5,7 @@ Description=LAST safety data-gathering service
 User=ocs
 WorkingDirectory=/home/ocs/python/WeatherSafety
 ExecStart=/home/ocs/python/WeatherSafety/bin/last-safety-daemon start
-ExecStop=/home/ocs/python/WeatherSafety/bin/last-safety-daemon start
+ExecStop=/home/ocs/python/WeatherSafety/bin/last-safety-daemon stop
 Restart=always
 
 [Install]
